<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_text_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/img_seller_audit_status"
                android:layout_width="70px"
                android:layout_height="70px"
                android:layout_marginTop="204px"
                android:src="@mipmap/seller_audit_success"/>
            <TextView
                android:id="@+id/tv_seller_audit_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="222px"
                android:layout_marginLeft="20px"
                android:text="审核成功"
                android:textColor="#52a358"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_seller_audit_success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48px"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seller_audit_success"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48px"
                android:text="@string/seller_audit_success_pc"
                android:lineSpacingMultiplier="1.5"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/btn_download_APP"
                android:layout_width="318px"
                android:layout_height="70px"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="226px"
                android:background="@drawable/btn_background_black"
                android:text="下载商家APP"
                android:textColor="@color/white"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_seller_audit_fail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48px"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:id="@+id/tv_seller_audit_fail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="审核失败："
                android:gravity="center_horizontal"
                android:textColor="@color/red"
                android:textSize="14sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_seller_audit_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48px"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seller_audit_in"
                android:gravity="center_horizontal"
                android:textColor="@color/corlor_666"
                android:textSize="13sp"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50px"
        android:text="如有任何疑问，请联系人工客服400-899-9264"
        android:textSize="12sp"
        android:textColor="@color/tv_hint"/>

</RelativeLayout>
