<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <include layout="@layout/layout_text_title" />

    <!--提交实名认证姓名和身份证-->
    <LinearLayout
        android:id="@+id/ll_authentication_one"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10px"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120px"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40px"
                    android:text="@string/real_name_text"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>
                <EditText
                    android:id="@+id/et_authentication_realname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20px"
                    android:background="@color/white"
                    android:hint="请输入您的身份证姓名"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="20px"
                android:background="@color/line_back"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120px"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40px"
                    android:text="@string/IDnumber_text"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>
                <EditText
                    android:id="@+id/et_authentication_IDnumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20px"
                    android:background="@color/white"
                    android:hint="请输入您的身份证号码"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/btn_realname_next"
            style="@style/btn_login_register"
            android:layout_marginTop="80px"
            android:text="下一步"/>
    </LinearLayout>

    <!--提交实名认证身份证照片-->
    <LinearLayout
        android:id="@+id/ll_authentication_IDcard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10px"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50px"
            android:layout_marginLeft="58px">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="身份证正面"
                android:textColor="@color/black"
                android:textSize="14sp"/>
            <ImageView
                android:id="@+id/authentication_IDcard_positive"
                android:layout_width="490px"
                android:layout_height="248px"
                android:layout_marginTop="32px"
                android:scaleType="centerCrop"
                android:src="@mipmap/authenticatin_idcard"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80px"
                android:text="身份证反面"
                android:textColor="@color/black"
                android:textSize="14sp"/>
            <ImageView
                android:id="@+id/authentication_IDcard_reverse"
                android:layout_width="490px"
                android:layout_height="248px"
                android:layout_marginTop="32px"
                android:scaleType="centerCrop"
                android:src="@mipmap/authenticatin_idcard"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40px"
                android:text="拍照提示"
                android:textColor="@color/black"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40px"
                android:text="@string/photograph_prompt"
                android:textColor="@color/tv_hint"
                android:textSize="12sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_realname_complete"
            style="@style/btn_login_register"
            android:layout_marginTop="80px"
            android:text="完 成"/>
    </LinearLayout>

    <!--提交实名认证中-->
    <LinearLayout
        android:id="@+id/ll_in_authentication"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10px"
        android:visibility="gone"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120px"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:layout_marginLeft="40px"
                    android:text="@string/real_name_text"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/tv_authentication_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10px"
                    android:text="审核中"
                    android:textColor="@color/red"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/tv_authentication_realname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="34px"
                    android:text="小小鸟"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="20px"
                android:background="@color/line_back"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120px"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:layout_marginLeft="40px"
                    android:text="@string/IDnumber_text"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/tv_authentication_IDnumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="34px"
                    android:text="410235648616513546"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="24px"
            android:layout_marginTop="20px"
            android:gravity="right"
            android:text="审核认证需要2-3个工作日，请您耐心等待！"/>
    </LinearLayout>


    <!--审核失败-->
    <LinearLayout
        android:id="@+id/ll_authentication_fail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="168px"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="认证失败！"
                android:textColor="@color/black"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/tv_again_authenticaion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10px"
                android:text="@string/again_authenticaion"
                android:textColor="@color/red"
                android:textSize="17sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="38px"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:gravity="center_horizontal"
            android:textSize="15sp"
            android:textColor="@color/corlor_666"
            android:text="失败原因"/>
    </LinearLayout>

</LinearLayout>
